--- a/app/src/main/res/layout/activity_admin_orders.xml
+++ b/app/src/main/res/layout/activity_admin_orders.xml
@@ -7,9 +7,19 @@
     tools:context=".admin_orders"
     android:background="@color/light_yellow">
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/recycler_for_orders_admin"
+    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
+        android:id="@+id/swipe_refresh"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:listitem="@layout/cardforhistory"/>
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/recycler_for_orders_admin"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            tools:listitem="@layout/cardforhistory" />
+    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
