--- a/app/src/main/res/layout/activity_splash_screen.xml
+++ b/app/src/main/res/layout/activity_splash_screen.xml
@@ -26,7 +26,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="47dp"
         android:backgroundTint="#000000"
-        android:indeterminateTint="#000000"
+        android:indeterminateTint="#C1C1C1"
         android:progressBackgroundTint="#000000"
         android:progressTint="#000000"
         android:progressTintMode="add"
@@ -44,7 +44,7 @@
         android:layout_height="wrap_content"
         android:text="IIT Jodhpur Canteen"
         android:textAlignment="center"
-        android:textColor="#000000"
+        android:textColor="#C1C1C1"
         android:textSize="20dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
