--- a/app/src/main/res/drawable/backfornotavail.xml
+++ b/app/src/main/res/drawable/backfornotavail.xml
@@ -3,7 +3,7 @@
     <item>
         <shape android:shape="rectangle"
             >
-            <solid android:color="#D1D1D1">
+            <solid android:color="#E6E6E6">
 
             </solid>
             <corners android:radius="20dp" />
