--- a/app/src/main/res/layout/activity_cart_page.xml
+++ b/app/src/main/res/layout/activity_cart_page.xml
@@ -18,6 +18,9 @@
         app:layout_constraintTop_toTopOf="parent"
         tools:listitem="@layout/cardforcart" />
 
+
+
+
     <Button
         android:id="@+id/checkout"
         android:layout_width="match_parent"
@@ -31,4 +34,16 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.976" />
+
+    <ProgressBar
+        android:id="@+id/hulalalala"
+        android:visibility="visible"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toBottomOf="@+id/checkout"
+        app:layout_constraintEnd_toEndOf="@+id/checkout"
+        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintStart_toStartOf="@+id/checkout"
+        app:layout_constraintTop_toBottomOf="@+id/recycler_for_menu_items1"
+        app:layout_constraintVertical_bias="1.0" />
 </androidx.constraintlayout.widget.ConstraintLayout>
