--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,18 +7,49 @@
     android:layout_height="match_parent"
     android:background="#FAECD9"
     tools:context=".main_page">
-    <androidx.recyclerview.widget.RecyclerView
-        android:scrollbarSize="5dp"
-        android:scrollbars="vertical"
-        android:alpha="0.5"
-        android:id="@+id/recycler_for_menu_items"
-        android:layout_width="409dp"
-        android:layout_height="729dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:listitem="@layout/cardforitems"/>
+
+<!--    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="match_parent"-->
+<!--        android:id="@+id/swipe_refresh">-->
+
+
+
+<!--        <androidx.recyclerview.widget.RecyclerView-->
+<!--            android:scrollbarSize="5dp"-->
+<!--            android:scrollbars="vertical"-->
+<!--            android:alpha="0.5"-->
+<!--            android:id="@+id/recycler_for_menu_items"-->
+<!--            android:layout_width="409dp"-->
+<!--            android:layout_height="729dp"-->
+<!--            app:layout_constraintBottom_toBottomOf="parent"-->
+<!--            app:layout_constraintEnd_toEndOf="parent"-->
+<!--            app:layout_constraintStart_toStartOf="parent"-->
+<!--            app:layout_constraintTop_toTopOf="parent"-->
+<!--            tools:listitem="@layout/cardforitems"/>-->
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+    <com.google.android.material.tabs.TabLayout
+        android:background="@color/black"
+        app:tabTextColor="@color/white"
+        app:tabIndicatorColor="@color/white"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:tabSelectedTextColor="@color/yellow"
+        android:id="@+id/tab_layout"/>
+
+
+
+        <androidx.viewpager2.widget.ViewPager2
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/viewpager"/>
+        </LinearLayout>
+<!--    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>-->
+
 
     <com.google.android.material.navigation.NavigationView
         app:headerLayout="@layout/nav_header"
