--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -1,6 +1,9 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Base.Theme.CanteenIITJ" parent="Theme.Material3.DayNight.NoActionBar">
+    <style name="Base.Theme.CanteenIITJ" parent="Theme.MaterialComponents.Light.DarkActionBar.Bridge">
+        <item name="colorPrimary">#000000</item>
+        <item name="colorOnPrimary">#C1C1C1</item>
+        <item name="colorOnSecondary">#C1C1C1</item>
         <!-- Customize your dark theme here. -->
         <!-- <item name="colorPrimary">@color/my_dark_primary</item> -->
     </style>
